kubernetes/test-apps/broken-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broken-app
  namespace: kubemind

spec:
  replicas: 1

  selector:
    matchLabels:
      app: broken-app

  template:
    metadata:
      labels:
        app: broken-app

    spec:
      containers:
      - name: broken-app
        image: nginx:notfound
